--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/HolyStarGazer/discord-galaxy-bot#readme",
   "dependencies": {
+    "better-sqlite3": "^12.4.6",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3"
   }
