--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ desktop.ini     # Windows
 
 # Scripts
 scripts/
+
+# Autostart related files
+AUTOSTART_GUIDE.md
+autostart-manager.js
+autostart.js
+start-bot-restart.bat
