--- a/package.json
+++ b/package.json
@@ -23,8 +23,14 @@
   },
   "homepage": "https://github.com/HolyStarGazer/discord-galaxy-bot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.19.0",
+    "@snazzah/davey": "^0.1.9",
     "better-sqlite3": "^12.4.6",
     "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "ffmpeg-static": "^5.3.0",
+    "prism-media": "^1.3.5",
+    "sodium-native": "^5.0.10"
   }
 }
