--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   },
   "homepage": "https://github.com/HolyStarGazer/discord-galaxy-bot#readme",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.19.0",
     "@snazzah/davey": "^0.1.9",
-    "better-sqlite3": "^12.4.6",
+    "better-sqlite3": "^12.6.2",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "ffmpeg-static": "^5.3.0",
